--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
         "tailwindcss": "^2.2.7"
     },
     "dependencies": {
-        "@ryangjchandler/alpine-clipboard": "^2.0.0",
+        "@prettier/plugin-php": "^0.17.3",
         "@tailwindcss/typography": "^0.4.1",
         "alpinejs": "^3.2.2",
-        "daisyui": "^1.10.0"
+        "daisyui": "^1.10.0",
+        "prettier": "^2.3.2"
     }
 }
